<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/airline"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:text="台灣航空"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/airline_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="Airline ID"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/airline"
        app:layout_constraintStart_toEndOf="@id/airline"
        app:layout_constraintTop_toTopOf="@id/airline" />

    <TextView
        android:id="@+id/flight_number"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="34567"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/airline_id"
        app:layout_constraintStart_toEndOf="@id/airline_id"
        app:layout_constraintTop_toTopOf="@id/airline_id" />

    <TextView
        android:id="@+id/terminal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:text="航廈: 1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/gate"
        app:layout_constraintEnd_toStartOf="@id/gate"
        app:layout_constraintTop_toTopOf="@id/gate" />

    <TextView
        android:id="@+id/gate"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="20dp"
        android:text="登機門: 35號"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/airport_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airline">

        <TextView
            android:id="@+id/departure_airport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="台北桃園機場(TPE)"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/flying"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/flying"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:src="@drawable/airplane_in_flight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/arrival_airport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="廣州白雲國際機場(CAN)"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/flying"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/schedule_time_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/schedule_time_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airport_constraint" />

    <TextView
        android:id="@+id/estimate_time_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/estimate_time_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/schedule_time_title"
        app:layout_constraintTop_toTopOf="@id/schedule_time_title" />

    <TextView
        android:id="@+id/actual_time_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/actual_time_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/estimate_time_title"
        app:layout_constraintTop_toTopOf="@id/estimate_time_title" />

    <TextView
        android:id="@+id/schedule_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="23:55"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/schedule_time_title"
        app:layout_constraintStart_toStartOf="@id/schedule_time_title"
        app:layout_constraintTop_toBottomOf="@id/schedule_time_title" />

    <TextView
        android:id="@+id/estimate_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="23:55"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/estimate_time_title"
        app:layout_constraintStart_toStartOf="@id/estimate_time_title"
        app:layout_constraintTop_toBottomOf="@id/estimate_time_title" />

    <TextView
        android:id="@+id/actual_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="23:55"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/actual_time_title"
        app:layout_constraintStart_toStartOf="@id/actual_time_title"
        app:layout_constraintTop_toBottomOf="@id/actual_time_title" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="出發DEPARTED"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/actual_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/actual_time_title"
        app:layout_constraintTop_toTopOf="@id/actual_time_title" />


</androidx.constraintlayout.widget.ConstraintLayout>